[#nossiue] Fix netty test failure